2008-11-23  Philip Withnall  <philip@tecnocode.co.uk>

	* src/plugins/totem-plugins-engine.c (totem_plugins_engine_load),
	(load_plugin_module):
	* src/plugins/totem-python-module.c (totem_python_module_load),
	(totem_python_module_unload), (totem_python_module_new_object),
	(totem_python_module_init), (totem_python_module_finalize):
	* src/plugins/totem-python-plugin.c (totem_python_object_init),
	(totem_python_object_finalize), (totem_python_object_get_type):
	Standardise debug output from the plugin system to use the D() macro.

2008-11-23  Christian Persch  <chpe@gnome.org>

	Bug 560328 – update smclient with latest libegg

	* src/eggdesktopfile.c: (egg_desktop_file_new),
	(egg_desktop_file_new_from_dirs),
	(egg_desktop_file_new_from_key_file), (start_startup_notification),
	(egg_desktop_file_launchv):
	* src/eggdesktopfile.h:
	* src/eggsmclient-1.patch:
	* src/eggsmclient-osx.c: (egg_sm_client_osx_class_init),
	(egg_sm_client_osx_new), (sm_client_osx_startup),
	(idle_quit_requested), (quit_requested), (quit_requested_resumed),
	(idle_will_quit):
	* src/eggsmclient-win32.c: (egg_sm_client_win32_init),
	(sm_client_win32_end_session), (emit_quit_requested), (emit_quit),
	(emit_quit_cancelled), (got_message),
	(g_win32_handle_source_finalize):
	* src/eggsmclient-xsmp.c: (sm_client_xsmp_set_initial_properties),
	(save_state), (set_properties), (ptrarray_prop):
	* src/eggsmclient.c: (sm_client_post_parse_func),
	(egg_sm_client_get): Update from libegg.

2008-11022  Patryk Zawadzki  <patrys@pld-linux.org>

	* data/totem.desktop.in.in.in: Drop X-* categories
	(Closes: #552027)

2008-11-13  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bvw_handle_application_message): Fix window
	resizing to bigger than the screen when playing large video
	files and "Resize window when new video is loaded" is selected
	(Closes: #416610)

2008-11-12  Philip Withnall  <philip@tecnocode.co.uk>
